--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: citra-ci
 
 on:
+  workflow_dispatch:
   push:
     branches: [ "*" ]
     tags: [ "*" ]
@@ -8,90 +9,90 @@ on:
     branches: [ master ]
 
 jobs:
-  clang-format:
-    runs-on: ubuntu-latest
-    container: citraemu/build-environments:linux-clang-format
-    steps:
-      - uses: actions/checkout@v2
-        with: 
-          fetch-depth: 0
-      - name: Build
-        env:
-          COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
-        run: ./.ci/linux-clang-format/docker.sh
+  # clang-format:
+  #   runs-on: ubuntu-latest
+  #   container: citraemu/build-environments:linux-clang-format
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Build
+  #       env:
+  #         COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
+  #       run: ./.ci/linux-clang-format/docker.sh
   build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image: ["linux-fresh", "linux-frozen", "linux-mingw"]
-    container: citraemu/build-environments:${{ matrix.image }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Set up cache
-        uses: actions/cache@v2
-        with:
-          path: ~/.ccache
-          key: ${{ runner.os }}-${{ matrix.image }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-${{ matrix.image }}-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
-      - name: Build
-        run: ./.ci/${{ matrix.image }}/docker.sh
-        env:
-          ENABLE_COMPATIBILITY_REPORTING: "ON"
-      - name: Pack
-        run: ./.ci/${{ matrix.image }}/upload.sh
-        if: ${{ matrix.image != 'linux-frozen' }}
-        env:
-          NAME: ${{ matrix.image }}
-      - name: Upload
-        uses: actions/upload-artifact@v2
-        if: ${{ matrix.image != 'linux-frozen' }}
-        with:
-          name: ${{ matrix.image }}
-          path: artifacts/
-  macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Set up cache
-        uses: actions/cache@v2
-        with:
-          path: ~/Library/Caches/ccache
-          key: ${{ runner.os }}-macos-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-macos-
-      - name: Query tag name
-        uses: little-core-labs/get-git-tag@v3.0.2
-        id: tagName
-      - name: Install dependencies
-        run: ./.ci/macos/deps.sh
-      - name: Build
-        run: ./.ci/macos/build.sh
-        env:
-          MACOSX_DEPLOYMENT_TARGET: "10.13"
-          ENABLE_COMPATIBILITY_REPORTING: "ON"
-      - name: Pack
-        run: ./.ci/macos/upload.sh
-      - name: Upload
-        uses: actions/upload-artifact@v2
-        with:
-          name: macos
-          path: artifacts/
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       image: ["linux-fresh", "linux-frozen", "linux-mingw"]
+  #   container: citraemu/build-environments:${{ matrix.image }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
+  #     - name: Set up cache
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ~/.ccache
+  #         key: ${{ runner.os }}-${{ matrix.image }}-${{ github.sha }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-${{ matrix.image }}-
+  #     - name: Query tag name
+  #       uses: little-core-labs/get-git-tag@v3.0.2
+  #       id: tagName
+  #     - name: Build
+  #       run: ./.ci/${{ matrix.image }}/docker.sh
+  #       env:
+  #         ENABLE_COMPATIBILITY_REPORTING: "ON"
+  #     - name: Pack
+  #       run: ./.ci/${{ matrix.image }}/upload.sh
+  #       if: ${{ matrix.image != 'linux-frozen' }}
+  #       env:
+  #         NAME: ${{ matrix.image }}
+  #     - name: Upload
+  #       uses: actions/upload-artifact@v4
+  #       if: ${{ matrix.image != 'linux-frozen' }}
+  #       with:
+  #         name: ${{ matrix.image }}
+  #         path: artifacts/
+  # macos:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
+  #     - name: Set up cache
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: ~/Library/Caches/ccache
+  #         key: ${{ runner.os }}-macos-${{ github.sha }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-macos-
+  #     - name: Query tag name
+  #       uses: little-core-labs/get-git-tag@v3.0.2
+  #       id: tagName
+  #     - name: Install dependencies
+  #       run: ./.ci/macos/deps.sh
+  #     - name: Build
+  #       run: ./.ci/macos/build.sh
+  #       env:
+  #         MACOSX_DEPLOYMENT_TARGET: "10.13"
+  #         ENABLE_COMPATIBILITY_REPORTING: "ON"
+  #     - name: Pack
+  #       run: ./.ci/macos/upload.sh
+  #     - name: Upload
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: macos
+  #         path: artifacts/
   windows:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Set up cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.buildcache
           key: ${{ runner.os }}-win-${{ github.sha }}
@@ -112,7 +113,7 @@ jobs:
     container: citraemu/build-environments:linux-transifex
     if: ${{ github.repository == 'citra-emu/citra' && !github.head_ref }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
       - name: Update Translation
@@ -124,7 +125,7 @@ jobs:
     needs: [build, macos]
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v4
       - name: Query tag name
         uses: little-core-labs/get-git-tag@v3.0.2
         id: tagName
