--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "boost"]
     path = externals/boost
-    url = https://github.com/citra-emu/ext-boost.git
+    url = https://github.com/blitzingeagle/ext-boost.git
 [submodule "nihstro"]
     path = externals/nihstro
     url = https://github.com/neobrain/nihstro.git
 [submodule "soundtouch"]
     path = externals/soundtouch
-    url = https://github.com/citra-emu/ext-soundtouch.git
+    url = https://codeberg.org/soundtouch/soundtouch.git
 [submodule "catch"]
     path = externals/catch
-    url = https://github.com/philsquared/Catch.git
+    url = https://github.com/catchorg/Catch2/tree/Catch1.x
 [submodule "dynarmic"]
     path = externals/dynarmic
-    url = https://github.com/citra-emu/dynarmic.git
+    url = https://github.com/rtiangha/dynarmic.git
 [submodule "xbyak"]
     path = externals/xbyak
     url = https://github.com/herumi/xbyak.git
@@ -30,16 +30,16 @@
     url = https://github.com/benhoyt/inih.git
 [submodule "libressl"]
     path = externals/libressl
-    url = https://github.com/citra-emu/ext-libressl-portable.git
+    url = https://github.com/blitzingeagle/ext-libressl-portable.git
 [submodule "libusb"]
     path = externals/libusb/libusb
     url = https://github.com/libusb/libusb.git
 [submodule "cubeb"]
     path = externals/cubeb
-    url = https://github.com/kinetiknz/cubeb.git
+    url = https://github.com/mozilla/cubeb.git
 [submodule "discord-rpc"]
     path = externals/discord-rpc
-    url = https://github.com/discord/discord-rpc.git
+    url = https://github.com/Lurpigi/discord-rpc.git
 [submodule "cpp-jwt"]
     path = externals/cpp-jwt
     url = https://github.com/arun11299/cpp-jwt.git
