--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
   #       env:
   #         COMMIT_RANGE: ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }}
   #       run: ./.ci/linux-clang-format/docker.sh
-  build:
+  # build:
   #   runs-on: ubuntu-latest
   #   strategy:
   #     matrix:
