--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,21 +108,21 @@ jobs:
         shell: bash
         env:
           ENABLE_COMPATIBILITY_REPORTING: "ON"
-  transifex:
-    runs-on: ubuntu-latest
-    container: citraemu/build-environments:linux-transifex
-    if: ${{ github.repository == 'citra-emu/citra' && !github.head_ref }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - name: Update Translation
-        run: ./.ci/transifex/docker.sh
-        env:
-          TRANSIFEX_API_TOKEN: ${{ secrets.TRANSIFEX_API_TOKEN }}
+  # transifex:
+  #   runs-on: ubuntu-latest
+  #   container: citraemu/build-environments:linux-transifex
+  #   if: ${{ github.repository == 'citra-emu/citra' && !github.head_ref }}
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: recursive
+  #     - name: Update Translation
+  #       run: ./.ci/transifex/docker.sh
+  #       env:
+  #         TRANSIFEX_API_TOKEN: ${{ secrets.TRANSIFEX_API_TOKEN }}
   release:
     runs-on: ubuntu-latest
-    needs: [build, macos]
+    needs: [windows]
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     steps:
       - uses: actions/download-artifact@v4
