--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
     branch = Catch1.x
 [submodule "dynarmic"]
     path = externals/dynarmic
-    url = https://github.com/rtiangha/dynarmic.git
+    url = https://github.com/yuzu-mirror/dynarmic.git
 [submodule "xbyak"]
     path = externals/xbyak
     url = https://github.com/herumi/xbyak.git
