--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,11 +90,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive    # 默认会尝试 checkout 某个 SHA
-          fetch-depth: 0           # 拉取完整历史，防止 SHA 缺失
-      - name: Fix broken submodule reference
+          submodules: recursive
+      - name: Clean up broken submodule
         run: |
-          git submodule sync
+          git submodule deinit -f externals/dynarmic || true
+          rm -rf .git/modules/externals/dynarmic externals/dynarmic
           git submodule update --init --recursive --remote
       - name: Set up cache
         uses: actions/cache@v4
