--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,10 +91,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Clean up broken submodule
+      - name: Override broken submodule
         run: |
-          git submodule deinit -f externals/dynarmic || true
-          rm -rf .git/modules/externals/dynarmic externals/dynarmic
+          git config submodule.externals/dynarmic.url https://github.com/MerryMage/dynarmic.git
+          git submodule sync
           git submodule update --init --recursive --remote
       - name: Set up cache
         uses: actions/cache@v4
@@ -112,7 +112,7 @@ jobs:
         run: ./.ci/windows-msvc/build.sh
         shell: bash
         env:
-          ENABLE_COMPATIBILITY_REPORTING: "ON"
+          ENABLE_COMPATIBILITY_REPORTING: "OFF"
   # transifex:
   #   runs-on: ubuntu-latest
   #   container: citraemu/build-environments:linux-transifex
